cabal-version:        2.4

name:                   hw-up
version:                0.1.0.0
synopsis:               Deployment tool
description:            Deployment tool
homepage:               https://github.com/haskell-works/hw-up
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2019 John Ky
category:               Development
tested-with:            GHC == 8.10.1, GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
extra-source-files:     CHANGELOG.md

common base                 { build-depends: base                 >= 4          && < 5      }

common doctest              { build-depends: doctest              >= 0.16.2     && < 0.17   }
common doctest-discover     { build-depends: doctest-discover     >= 0.2        && < 0.3    }
common hedgehog             { build-depends: hedgehog             >= 1.0        && < 1.1    }
common hspec                { build-depends: hspec                >= 2.4        && < 2.6    }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.1    && < 0.2    }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1        && < 0.2    }
common selective            { build-depends: selective            >= 0.2        && < 1.0    }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

common hw-up
  build-depends:        hw-up

library
  import:               base, config
                      , selective
  exposed-modules:      HaskellWorks.Up.Core
                        HaskellWorks.Up.Opt
  hs-source-dirs:       src

executable hw-up
  import:               base, config
  main-is:              Main.hs
  build-depends:        hw-up
  hs-source-dirs:       app

test-suite hw-up-test
  import:               base, config
                      , hedgehog
                      , hspec
                      , hw-hedgehog
                      , hw-hspec-hedgehog
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  build-depends:        hw-up
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  other-modules:        Paths_hw_up

test-suite doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , hw-up
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       doctest
  build-tool-depends:   doctest-discover:doctest-discover
